src/test/test-models/bad/data_index/non_data_index4.stan
parameters {
  real y[3];
}
transformed parameters {
  matrix[size(y), 2] m;
}
